// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddCompanyRep component renders correctly, initial 1`] = `
<section
  className="sc-bdVaJa cgbLUC"
>
  <form
    className="sc-bwzfXH gJIwTT"
    onSubmit={[Function]}
  >
    <h1
      className="sc-htpNat cfPrNC"
    >
      Add a Company Representative
    </h1>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="firstName"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label
        className="sc-ifAKCX crRGrj"
        value=""
      >
        Representatives First Name
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="lastName"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label
        className="sc-ifAKCX crRGrj"
        value=""
      >
        Representatives Last Name
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="email"
        onChange={[Function]}
        type="email"
        value=""
      />
      <label
        className="sc-ifAKCX crRGrj"
        value=""
      >
        Representatives E-Mail
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="password"
        onChange={[Function]}
        type="password"
        value=""
      />
      <label
        className="sc-ifAKCX crRGrj"
        value=""
      >
        Password
      </label>
    </div>
    <button
      className="sc-gzVnrw jmsTpF"
      disabled={undefined}
      onClick={[Function]}
    >
      Add
    </button>
  </form>
</section>
`;

exports[`AddCompanyRep component renders correctly, with data 1`] = `
<section
  className="sc-bdVaJa cgbLUC"
>
  <form
    className="sc-bwzfXH gJIwTT"
    onSubmit={[Function]}
  >
    <h1
      className="sc-htpNat cfPrNC"
    >
      Add a Company Representative
    </h1>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="firstName"
        onChange={[Function]}
        type="text"
        value="kalle"
      />
      <label
        className="sc-ifAKCX bXngpg"
        value="kalle"
      >
        Representatives First Name
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="lastName"
        onChange={[Function]}
        type="text"
        value="kula"
      />
      <label
        className="sc-ifAKCX bXngpg"
        value="kula"
      >
        Representatives Last Name
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="email"
        onChange={[Function]}
        type="email"
        value="woo@woo.com"
      />
      <label
        className="sc-ifAKCX bXngpg"
        value="woo@woo.com"
      >
        Representatives E-Mail
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="password"
        onChange={[Function]}
        type="password"
        value="aaa"
      />
      <label
        className="sc-ifAKCX bXngpg"
        value="aaa"
      >
        Password
      </label>
    </div>
    <button
      className="sc-gzVnrw jmsTpF"
      disabled={undefined}
      onClick={[Function]}
    >
      Add
    </button>
  </form>
</section>
`;
